Mon Aug 25 arton
 *ext/load.c
	Fix checking the result for loading alternate_jvm_type.
	(patch from Kumar, thanks)
Thu Aug 14 arton
 *ext/rjb.c, load.c, etc
	change comment line // -> /* */ because AIX's compiler
	add _AIX for load.c (this patch from Ittay Dror, thanks)
 *ext/load.c
	add ALT_JVM_TYPE for alternative jvm directory (by Kumar)
Sun Jul 13 arton
 *ext/rjb.c
	display warning when Rjb load jvm implicitly if $DEBUG or $VERBOSE.
Mon May 26 arton
 *ext/rjb.c
	correct char primitive conversion for Bigendian machine.
	use macroes for loading classes
 *ext/load.c
	adjust OS X's directory
 *ext/extconf.rb	
	adjust OS X's directory if Home exists	
Thu Mar 27 arton
 *ext/rjb.c
	mark version 1.1.4 for the next release.
 *test/test.rb
	remove unload, because it fails. 
	It's more important to assert each functions.
Thu Mar 27 arton
 *ext/riconv.c
	activate conv tables for getenv configuration.
Tue Mar 5 Kuwashima
 *ext/rjb.c
 *ext/rjb.h
 *ext/rjbexception.c
 	add auto load method.
Tue Mar  4 Kuwashima
 *ext/rjbexception.c
 *ext/rjb.c
 *test/test.rb
 	clear(ignore) exception in current java thread, before some operation.
 *ext/rjbexception.c
 *ext/rjb.c
	add auto load for Rjb::bind, Rjb::throw
 *ext/rjb.c
 *test/test.rb
	add Rjb::unbind
 *test/test.rb
 	add loading rubygems 
Sat Feb 23 arton
 *test/test.rb
	let test_field metod use Test.class instead of Point.class
 *test/Test.java
	add a public field for testing
Fri Feb 22 arton
 *ext/rjb.c
	mark version 1.1.3 for the next release.
Fri Feb 22 arton
 *ext/rjb.c
	fix field reference (bug# 18238)
Wed Jan 9 arton
 *ext/rjb.h
	add some ruby macros that defined after 1.8.6 for compatibility
	Change RBridge.class by 1.4.2
 *data/rjb/jp/co/infoseek/hp/arton/rjb/RBridge.class 
	compiled by 1.4.2 version of Java	
 *rjb.c
        mark version 1.1.2 for the next release.
Tue Dec 27 Kuwashima
 *test/Test.java
 *test/test.rb
 *ext/depend
 *ext/load.c
 *ext/extconf.rb
 *ext/rjbexception.c
 *ext/rjb.c
 *ext/riconv.c